Fixed mobile-menu screen overflow

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -99,5 +99,9 @@
     width: 100%;
   }
 }
+.overflow-fix {
+  position: relative;
+  overflow-x: hidden;
+}
 
 /*# sourceMappingURL=main.css.map */
